--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 <div id="update"></div>
             </div>
             <div name="main" style="display: none">
+                <div style="flex: 1; width: 100%;" ></div>
             </div>
             <div name="history" style="display: none">
                 <div id="HISTORYHeader">
